--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -15,6 +15,8 @@ linters:
     - musttag
     - gochecknoglobals
     - gosmopolitan
+    - contextcheck
+    - containedctx
     - varnamelen
     - lll
 
