--- a/.github/workflows/step_package.yml
+++ b/.github/workflows/step_package.yml
@@ -47,18 +47,18 @@ jobs:
         shell: bash
 
       # Check if bootstrap script is working for latest release and nightly release
-      - name: Check bootstrap script
-        run: |
-          mkdir -p latest
-          cd latest
-          ../scripts/bootstrap-dashboard-reporter-app.sh
-          cd ..
+      #- name: Check bootstrap script
+      #  run: |
+      #    mkdir -p latest
+      #    cd latest
+      #    ../scripts/bootstrap-dashboard-reporter-app.sh
+      #    cd ..
 
-          mkdir -p nightly
-          cd nightly
-          NIGHTLY=1 ../scripts/bootstrap-dashboard-reporter-app.sh
-          cd ..
-        shell: bash
+      #    mkdir -p nightly
+      #    cd nightly
+      #    NIGHTLY=1 ../scripts/bootstrap-dashboard-reporter-app.sh
+      #    cd ..
+      #  shell: bash
 
       - name: Upload plugin artifacts
         uses: actions/upload-artifact@v4
