--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -22,3 +22,5 @@ jobs:
           go-version-file: 'go.mod'
       - name: golangci-lint
         uses: golangci/golangci-lint-action@aaa42aa0628b4ae2578232a66b541047968fac86 # v6.1.0
+        with:
+          args: --timeout 5m
