--- a/package.json
+++ b/package.json
@@ -68,25 +68,29 @@
     "sass-loader": "16.0.1",
     "style-loader": "4.0.0",
     "swc-loader": "^0.2.3",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "5.6.3",
-    "webpack": "^5.93.0",
+    "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
     "webpack-livereload-plugin": "^3.0.2",
     "imports-loader": "^5.0.0",
-    "webpack-virtual-modules": "^0.6.2"
+    "webpack-virtual-modules": "^0.6.2",
+    "@grafana/e2e-selectors": "11.2.2",
+    "semver": "^7.6.3",
+    "terser-webpack-plugin": "^5.3.10",
+    "webpack-subresource-integrity": "^5.1.0"
   },
   "engines": {
     "node": ">=20"
   },
   "dependencies": {
     "@emotion/css": "11.13.0",
-    "@grafana/data": "^11.1.4",
-    "@grafana/runtime": "^11.1.4",
-    "@grafana/ui": "^11.1.4",
+    "@grafana/data": "^11.2.2",
+    "@grafana/runtime": "^11.2.2",
+    "@grafana/ui": "^11.2.2",
     "@grafana/experimental": "2.1.2",
-    "@grafana/schema": "^11.1.4",
+    "@grafana/schema": "^11.2.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "^5.2.0",
