--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "@stylistic/eslint-plugin-ts": "^2.9.0",
     "@typescript-eslint/eslint-plugin": "^8.12.1",
     "@typescript-eslint/parser": "^8.12.1",
-    "eslint": "^9.13.0",
+    "eslint": "8",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsdoc": "^50.4.3",
     "eslint-plugin-react": "^7.37.2",
