--- a/package.json
+++ b/package.json
@@ -36,10 +36,11 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@babel/core": "^7.21.4",
-    "@grafana/eslint-config": "^7.0.0",
+    "@grafana/e2e-selectors": "11.3.0",
+    "@grafana/eslint-config": "^8.0.0",
     "@grafana/plugin-e2e": "^1.10.0",
-    "@grafana/tsconfig": "^2.0.0",
     "@grafana/plugin-meta-extractor": "^0.0.8",
+    "@grafana/tsconfig": "^2.0.0",
     "@playwright/test": "^1.47.1",
     "@swc/core": "^1.7.26",
     "@swc/helpers": "^0.5.0",
@@ -50,8 +51,6 @@
     "@types/jest": "^29.5.0",
     "@types/lodash": "^4.14.194",
     "@types/node": "^22.5.4",
-    "@types/testing-library__jest-dom": "5.14.9",
-    "@types/react-router-dom": "^5.3.3",
     "copy-webpack-plugin": "^12.0.0",
     "css-loader": "^7.1.2",
     "eslint-plugin-deprecation": "^3.0.0",
@@ -59,6 +58,7 @@
     "fork-ts-checker-webpack-plugin": "^9.0.0",
     "glob": "^11.0.0",
     "identity-obj-proxy": "3.0.0",
+    "imports-loader": "^5.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "prettier": "^3.3.3",
@@ -66,20 +66,18 @@
     "replace-in-file-webpack-plugin": "^1.0.6",
     "sass": "1.80.4",
     "sass-loader": "16.0.2",
+    "semver": "^7.6.3",
     "style-loader": "4.0.0",
     "swc-loader": "^0.2.3",
+    "terser-webpack-plugin": "^5.3.10",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "5.6.3",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
     "webpack-livereload-plugin": "^3.0.2",
-    "imports-loader": "^5.0.0",
-    "webpack-virtual-modules": "^0.6.2",
-    "@grafana/e2e-selectors": "11.3.0",
-    "semver": "^7.6.3",
-    "terser-webpack-plugin": "^5.3.10",
-    "webpack-subresource-integrity": "^5.1.0"
+    "webpack-subresource-integrity": "^5.1.0",
+    "webpack-virtual-modules": "^0.6.2"
   },
   "engines": {
     "node": ">=20"
@@ -87,13 +85,20 @@
   "dependencies": {
     "@emotion/css": "11.13.4",
     "@grafana/data": "^11.2.2",
-    "@grafana/runtime": "^11.2.2",
-    "@grafana/ui": "^11.2.2",
     "@grafana/experimental": "2.1.2",
+    "@grafana/runtime": "^11.2.2",
     "@grafana/schema": "^11.2.2",
+    "@grafana/ui": "^11.2.2",
+    "@stylistic/eslint-plugin-ts": "^2.9.0",
+    "@typescript-eslint/eslint-plugin": "^8.12.1",
+    "@typescript-eslint/parser": "^8.12.1",
+    "eslint": "8",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsdoc": "^50.4.3",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-router-dom": "^5.2.0",
     "rxjs": "7.8.1",
     "tslib": "2.8.0"
   }
