--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
       context: ./.config
       args:
         grafana_image: ${GRAFANA_IMAGE:-grafana-oss}
-        grafana_version: ${GRAFANA_VERSION:-11.1.4}
+        grafana_version: ${GRAFANA_VERSION:-11.3.0}
         development: ${DEVELOPMENT:-false}
     cap_add:
       - SYS_PTRACE
@@ -33,6 +33,7 @@ services:
       - GF_AUTH_LOGIN_COOKIE_NAME=${GF_AUTH_LOGIN_COOKIE_NAME:-grafana_session}
       - GF_AUTH_BASIC_ENABLED=${GF_AUTH_BASIC_ENABLED:-false}
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+      - GF_AUTH_MANAGED_SERVICE_ACCOUNTS_ENABLED=true
       # skip login page
       # - GF_AUTH_DISABLE_LOGIN_FORM=true
       # We need to toggle external service accounts so that Grafana will get
